<resources>
    <string name="app_name">MVVMApplication</string>
    <string name="invitation_email_html_content"><![CDATA[<!DOCTYPE html>
        <html>
            <body>
                <div>
                    <a href="%%APPINVITE_LINK_PLACEHOLDER%%">Install My App</a>
                </div>
            </body>
        </html>]]>
    </string>
    <string-array name="actionSpinnerFilter">
        <item>Tỉnh thành phố</item>
        <item>Quận huyện</item>
    </string-array>
    <string-array name="proverb">
        <item>"Success is most often achieved by those who don't know that failure is inevitable"</item>
        <item>"Things work out best for those who make the best of how things work out"</item>
        <item>"Courage is grace under pressure"</item>
        <item>"If you are not willing to risk the usual, you will have to settle for the ordinary."</item>
        <item>"Learn from yesterday, live for today, hope for tomorrow. The important thing is not to stop questioning."</item>
        <item>"Sometimes you can't see yourself clearly until you see yourself through the eyes of others."</item>
        <item>"All our dreams can come true if we have the courage to pursue them."</item>
        <item>"It does not matter how slowly you go, so long as you do not stop."</item>
        <item>"Success is walking from failure to failure with no loss of enthusiasm."</item>
        <item>"Someone is sitting in the shade today because someone planted a tree a long time ago."</item>
        <item>"Whenever you see a successful person, you only see the public glories, never the private sacrifices to reach them."</item>
        <item>"Don't cry because it's over, smile because it happened."</item>
        <item>"You only live once, but if you do it right, once is enough."</item>
        <item>"Opportunities don't happen. You create them."</item>
        <item>"Once you choose hope, anything's possible."</item>
        <item>"Try not to become a person of success, but rather try to become a person of value."</item>
        <item>"It is not the strongest of the species that survive, nor the most intelligent, but the one most responsive to change."</item>
        <item>"The best and most beautiful things in the world cannot be seen or even touched &#8212; they must be felt with the heart."</item>
        <item>"Great minds discuss ideas; average minds discuss events; small minds discuss people."</item>
        <item>"Live as if you were to die tomorrow. Learn as if you were to live forever."</item>
        <item>"The best revenge is massive success."</item>
        <item>"The difference between winning and losing is most often not quitting."</item>
        <item>"I have not failed. I've just found 10,000 ways that won't work."</item>
        <item>"When you cease to dream you cease to live."</item>
        <item>"A successful man is one who can lay a firm foundation with the bricks others have thrown at him."</item>
        <item>"May you live every day of your life."</item>
        <item>"No one can make you feel inferior without your consent."</item>
        <item>"Failure is another steppingstone to greatness."</item>
        <item>"The whole secret of a successful life is to find out what is one's destiny to do, and then do it."</item>
        <item>"If you're going through hell, keep going."</item>
        <item>"In order to be irreplaceable one must always be different."</item>
        <item>"What seems to us as bitter trials are often blessings in disguise."</item>
        <item>"You miss 100 percent of the shots you don't take."</item>
        <item>"The distance between insanity and genius is measured only by success."</item>
        <item>"The way I see it, if you want the rainbow, you gotta put up with the rain."</item>
        <item>"To me, business isn't about wearing suits or pleasing stockholders. It's about being true to yourself, your ideas and focusing on the essentials."</item>
        <item>"The longer I live, the more beautiful life becomes."</item>
        <item>"Happiness is a butterfly, which when pursued, is always beyond your grasp, but which, if you will sit down quietly, may alight upon you."</item>
        <item>"You must expect great things of yourself before you can do them."</item>
        <item>"If you can't explain it simply, you don't understand it well enough."</item>
        <item>"You can't please everyone, and you can't make everyone like you."</item>
    </string-array>
    <string-array name="author">
        <item>Coco Chanel</item>
        <item>John Wooden</item>
        <item>Ernest Hemingway</item>
        <item>Jim Rohn</item>
        <item>Albert Einstein</item>
        <item>Ellen DeGeneres</item>
        <item>Walt Disney</item>
        <item>Confucius</item>
        <item>Winston Churchill</item>
        <item>Warren Buffett</item>
        <item>Vaibhav Shah</item>
        <item>Dr. Seuss</item>
        <item>Mae West</item>
        <item>Chris Grosser</item>
        <item>Christopher Reeve</item>
        <item>Albert Einstein</item>
        <item>Charles Darwin</item>
        <item>Helen Keller</item>
        <item>Eleanor Roosevelt</item>
        <item>Mahatma Gandhi</item>
        <item>Frank Sinatra</item>
        <item>Walt Disney</item>
        <item>Thomas Edison</item>
        <item>Malcolm Forbes</item>
        <item>David Brinkley</item>
        <item>Jonathan Swift</item>
        <item>Eleanor Roosevelt</item>
        <item>Oprah Winfrey</item>
        <item>Henry Ford</item>
        <item>Winston Churchill</item>
        <item>Coco Chanel</item>
        <item>Oscar Wilde</item>
        <item>Wayne Gretzky</item>
        <item>Bruce Feirstein</item>
        <item>Dolly Parton</item>
        <item>Richard Branson</item>
        <item>Frank Lloyd Wright</item>
        <item>Nathaniel Hawthorne</item>
        <item>Michael Jordan</item>
        <item>Albert Einstein</item>
        <item>Katie Couric</item>
    </string-array>
    <string-array name="minutePickerValue">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
    </string-array>
    <string-array name="salaryPicker">
        <item>0</item>
        <item>100000</item>
        <item>200000</item>
        <item>500000</item>
        <item>1000000</item>
        <item>2000000</item>
        <item>5000000</item>
        <item>10000000</item>
        <item>20000000</item>
        <item>50000000</item>
        <item>100000000</item>
        <item>200000000</item>
        <item>500000000</item>
        <item>1000000000</item>
        <item>2000000000</item>
        <item>5000000000</item>
        <item>10000000000</item>
        <item>20000000000</item>
        <item>50000000000</item>
    </string-array>
    <string name="publish_accept">Đang công khai hồ sơ</string>
    <string name="publish_do_nothing">Công khai hồ sơ</string>
    <string name="publish_conflict">Đã có xung đột xảy ra</string>
    <string name="publish_admin_blocked">Hồ sơ của bạn đã bị blocked bởi admin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label">MVVMApplication</string>
    <string name="prompt_username">Username</string>
    <string name="default_point">1.0</string>
    <string name="default_name">Default Name</string>
    <string name="admin_add_newuser">Add new Account</string>
    <string name="label_administrator">Admin</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="notification">notification</string>
    <string name="favourite">favourite</string>
    <string name="setting">setting</string>
    <string name="unknown_error">unexpected error</string>
    <string name="action_login">Login</string>
    <string name="action_login_social">Login Social</string>
    <string name="or_text">OR</string>
    <string name="facebook_login_text">Facebook</string>
    <string name="google_login_text">Google</string>
    <string name="add_to_favourite">Favourite</string>
    <string name="rating">Rating</string>
    <string name="detail">Detail</string>
    <string name="dummy_text">dummy text</string>
    <string name="admin_add_newuser_username">Username</string>
    <string name="admin_add_newuser__email">Email</string>
    <string name="admin_add_newuser_uplaypassword">Uplay Password</string>
    <string name="admin_add_newuser_confirmpassword">Confirm Password</string>
    <string name="admin_add_newuser_age">Birthday</string>
    <string name="admin_add_newuser_picture">Avatar</string>
    <string name="admin_title_editprofile_user">Edit Profile User</string>
    <string name="admin_button_editprofile_user">Update</string>
    <string name="admin_edit_myinfo">Change Profile</string>
    <string name="admin_title_appointment">Setup Appointment</string>
    <string name="admin_manage_file">Manage File</string>
    <string name="admin_title_upgradeaccount">Upgrade Account</string>
    <string name="admin_title_update_profile_user">Update User</string>
    <string name="admin_password_update_user">Password</string>
    <string name="admin_show">Show</string>
    <string name="admin_button_update_acount">Update Account</string>
    <string name="title_search_view">search</string>
    <string name="description_settingimg">more detail</string>
    <string name="account_setting">Thiết lập tài khoản</string>
    <string name="view_profile">Hồ sơ cá nhân</string>
    <string name="edit_profile_to_provide_more_contact_info">Cung cấp thông tin để được hỗ trợ tốt nhất</string>
    <string name="topup_money">Nạp tiền</string>
    <string name="payment_system_title">Nạp tiền vào tài khoản để hưởng tối đa tiện ích</string>
    <string name="others">Khác</string>
    <string name="logout">Đăng xuất</string>
    <string name="app_guide">Hướng dẫn sử dụng</string>
    <string name="app_guide_subtittle">Cách sử dụng app Fast Job</string>
    <string name="invite_friend">Mời bạn bè cùng tham gia</string>
    <string name="appointment_booking">Đặt lịch hẹn</string>
    <string name="hint_name_appointment">Tên cuộc hẹn</string>
    <string name="decline">Hủy</string>
    <string name="accept">Đồng ý</string>
    <string name="appointment_duration">Thời lượng cuộc hẹn</string>
    <string name="note">Ghi chú</string>
    <string name="example_date">26/8/2018</string>
    <string name="example_time">12:00 PM</string>
    <string name="tittle_deposit_money_appointment">Số tiền đặt cọc cho cuộc hẹn</string>
    <string name="dummy_money">200.000 đ</string>
    <string name="Date">Ngày :</string>
    <string name="fail">Thất bại</string>
    <string name="status">Trạng thái</string>
    <string name="time">Thời gian</string>
    <string name="deposit_money">Tiền đặt cọc</string>
    <string name="contact_info">Thông tin liên lạc</string>
    <string name="make_a_call">Gọi điện</string>
    <string name="phonenumber">số điện thoại</string>
    <string name="company_title">Thông tin doanh nghiệp</string>
    <string name="brand_name">Tên công ty</string>
    <string name="logo_title">Logo công ty</string>
</resources>