<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_notification"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_24dp"
        android:title="@string/notification"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favourite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_24dp"
        android:title="@string/favourite"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_setting"
        android:enabled="true"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/setting"
        app:showAsAction="always" />
</menu>