<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:navigationIcon="@drawable/ic_chevron_left_white_24dp"
        app:title="@string/appointment_booking"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_above="@id/button_container"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_name_appointment"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_marginTop="15dp"
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_weight="6"
                    android:background="@drawable/border_bottomline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/example_date"/>
                    <ImageView
                        android:layout_alignParentEnd="true"
                        android:contentDescription=""
                        android:layout_gravity="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="center"
                        android:background="@drawable/ic_event_lighter_blue_24dp"/>
                </RelativeLayout>
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"/>
                <RelativeLayout
                    android:layout_weight="3"
                    android:background="@drawable/border_bottomline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/example_time"/>
                    <ImageView
                        android:layout_alignParentEnd="true"
                        android:contentDescription=""
                        android:layout_gravity="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="center"
                        android:src="@drawable/ic_alarm_colorprimary_24dp"/>
                </RelativeLayout>
            </LinearLayout>
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/color_lighter_gray"
                android:hint="@string/appointment_duration"/>
            <EditText
                android:padding="8dp"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="8"
                android:minLines="8"
                android:scrollbars="vertical"
                android:fadeScrollbars="true"
                android:maxLines="10"
                android:hint="@string/note"
                android:background="@drawable/user_ruchange_border_edittext"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tittle_deposit_money_appointment"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:textColor="@color/user_color_text_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimaryBlueGrey"
                android:text="@string/dummy_money"
                android:textSize="50sp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:textStyle="bold"
            android:textColor="@color/light_blue"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/decline"/>
        <Button
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept"/>
    </LinearLayout>
</RelativeLayout>
