<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="appointmentmodel"
            type="com.mvvm.kien2111.mvvmapplication.ui.listappointment.common.AppointmentModel"/>
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:defaultImg="@{@drawable/defaultimage}"
                app:imageCircleUrl="@{appointmentmodel.avatar}"/>
            <LinearLayout
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/user_color_text_black"
                    android:textSize="16sp"
                    android:text="@string/default_name"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/user_color_text_black"
                        android:textSize="16sp"
                        android:text="@string/Date"/>
                    <TextView
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/example_date"
                        android:textSize="16sp"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:baselineAligned="false"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/deposit_money"
                            android:textColor="@color/user_color_text_black"/>
                        <TextView
                            app:firsttextColor="@{@color/green_money_color}"
                            app:secondtextcolor="@{@color/dark_blue_currency}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:textSize="12sp"
                            android:text="@string/dummy_money"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/time"
                            android:textColor="@color/user_color_text_black"/>
                        <TextView
                            app:firsttextColor="@{@color/dark_blue_currency}"
                            app:secondtextcolor="@{@color/time_unit_system}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:textSize="12sp"
                            android:text="@string/example_time"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/status"
                            android:textColor="@color/user_color_text_black"/>
                        <TextView
                            android:textStyle="bold"
                            android:textColor="@color/colorAccentDark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:textSize="12sp"
                            android:text="@string/fail"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/contact_container"
            android:padding="20dp"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/contact_info"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:padding="5dp"
                android:background="@drawable/border_bottomline_black"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:contentDescription=""
                    android:src="@drawable/ic_email_color_primary_blue_grey_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:text="@{appointmentmodel.email,default=@string/default_email}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:background="@drawable/border_bottomline_black"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:contentDescription=""
                    android:src="@drawable/ic_phone_color_primary_grey_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:text="@{appointmentmodel.phonenumber,default=@string/default_phonenumber}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <Button
                android:text="@string/make_a_call"
                android:textColor="@android:color/white"
                android:theme="@style/RaisedButtonColorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>



</layout>