<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="olduser"
            type="com.mvvm.kien2111.mvvmapplication.model.User"/>
        <variable
            name="vm"
            type="com.mvvm.kien2111.mvvmapplication.ui.userprofile.bussiness.BussinessProfileViewModel"/>
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginEnd="20dp"
            android:text="@string/company_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_brandname"
            android:paddingBottom="10dp"
            android:paddingStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand_name"
            android:text="@{olduser.brandname}"
            android:theme="@style/MyEdittextStyle" />
        <TextView
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginEnd="20dp"
            android:text="@string/logo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/logo_imageView"
            android:layout_marginTop="5dp"
            android:contentDescription=""
            app:imageUrl="@{olduser.logo_company}"
            app:defaultImg="@{@drawable/defaultimage}"
            app:errorImg="@{@drawable/errorimg}"
            android:scaleType="fitCenter"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp">
            <EditText
                android:id="@+id/edt_phonenumber"
                android:paddingBottom="10dp"
                android:paddingEnd="24dp"
                android:paddingStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyEdittextStyle"
                android:gravity="start"
                android:hint="@string/phonenumber"
                android:inputType="phone"
                android:textColorHint="@color/darker_gray"
                android:text="@{olduser.phone_company}"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
            <ImageView
                android:layout_marginTop="5dp"
                android:layout_gravity="end"
                android:contentDescription=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_phone_color_primary_grey_24dp"
                android:id="@+id/imageView2" />
        </FrameLayout>
    </LinearLayout>
</layout>